--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
             <div class="auth">
                 <button class="login-btn" onclick="location.href='login.html'">Login</button>
-                <button class="fundraise-btn">Start a Fundraiser</button>
+                <button class="fundraise-btn" onclick="location.href='fundraiser_form.html'">Start a Fundraiser</button>
             </div>
         </div>
     </header>
@@ -30,7 +30,7 @@
         <div class="hero-content">
             <h2>Start a Fundraiser Today</h2>
             <p>Help others by raising funds for those in need.</p>
-            <button class="hero-btn">Get Started</button>
+            <button class="hero-btn" onclick="location.href='fundraiser_form.html'">Get Started</button>
         </div>
     </section>
 
