--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - IITB Sahayak</title>
+    <title>Register - IITB Sahayak</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,10 +22,14 @@
         </div>
     </header>
 
-    <section class="login-section">
-        <div class="login-box">
-            <h2>Login to Your Account</h2>
-            <form action="#" method="POST">
+    <section class="registration-section">
+        <div class="form-box">
+            <h2>Create Your Account</h2>
+            <form id="registerForm">
+                <div class="input-group">
+                    <label for="name">Full Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
                 <div class="input-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
@@ -34,10 +38,15 @@
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="login-submit-btn">Login</button>
+                <div class="input-group">
+                    <label for="confirm_password">Confirm Password:</label>
+                    <input type="password" id="confirm_password" name="confirm_password" required>
+                </div>
+                <p id="error-message" class="error-message"></p> <!-- Error message element -->
+                <button type="submit" class="register-btn">Create Account</button>
             </form>
 
-            <p class="new-user-text">New user? <button class="new-user-btn" onclick="location.href='register.html'">Create an Account</button></p>
+            <p class="login-link">Already have an account? <a href="login.html">Login here</a></p>
         </div>
     </section>
 
