Week progress by Saurbh
24m2132 added all .html files along with script.js and style.css for work of week- 16 oct- 23 oct

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
                 </ul>
             </nav>
             <div class="auth">
-                <button class="login-btn">Login</button>
-                <button class="fundraise-btn">Start a Fundraiser</button>
+                <button class="login-btn" onclick="location.href='login.html'">Login</button>
+                <button class="fundraise-btn" onclick="location.href='fundraiser_form.html'">Start a Fundraiser</button>
             </div>
         </div>
     </header>
